# RegistryManager

./: .gitignore  AGENTS.md  README.md  docker-compose.test.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: AGENTS.md  app.spec.ts  browse.spec.ts  dashboard.spec.ts  discovery.spec.ts  local-gc-failure.spec.ts  local-gc.spec.ts  offline-cache.spec.ts  onboarding.spec.ts  profile-helpers.ts  safe-delete-error.spec.ts  safe-delete.spec.ts
src/: AGENTS.md  App.css  App.test.tsx  App.tsx  setupTests.ts  types.test.ts  types.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: AGENTS.md  audit.rs  cache.rs  delete.rs  docker.rs  gc.rs  mod.rs  registry.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/docker/: client.rs  discovery.rs  error.rs  mod.rs  types.rs
src-tauri/src/registry/: client.rs  error.rs  mod.rs  types.rs
src-tauri/src/store/: db.rs  error.rs  mod.rs  models.rs  operations.rs
src-tauri/tests/: command_integration_test.rs  delete_gc_test.rs  docker_context_test.rs  docker_discovery_test.rs  integration_test.rs  registry_client_test.rs
src/components/audit/: AuditLogTable.test.tsx  AuditLogTable.tsx
src/components/common/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  StaleCacheBanner.tsx  (+1 more)
src/context/: RegistryContext.tsx
src/hooks/: useRegistry.test.ts  useRegistry.ts  useTauriCommand.ts
src/utils/: registryUrl.test.ts  registryUrl.ts
(+29 files in other folders)
